recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:4: error: ')' expected but integer literal found.
	avance(double 100)
                      ^