recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
for (i<-1 to 4){
	avance(double 100)
	droite(double 100)
     avance(double 100)
	droite(double 100)
}
}
